@@ -6,6 +6,7 @@ Version: 2.2.0 (in development)
 - Add support for Claris FileMaker Server 2023 (20.1).
 - Add support for Ubuntu 22.04 LTS (on amd64 architecture).
 - Add support for Ubuntu 22.04 LTS on arm64 architecture.
+- Update "GET SERVERPREFS" command to get persistent cache setting for Claris FileMaker Server 2023 (20.1). (Usage: "fmcsadmin get serverprefs PersistCacheEnabled")
 - Add support for Windows Server 2019 and Windows Server 2022.
 - Built with Go 1.20.
 - [INFO] Drop support for Claris FileMaker Server 19.3.
